# myrd

./: COLLEAGUE_WORKFLOW.md  Cargo.toml  DEPENDENCY_DOWNLOAD.md  DEVELOPMENT_LOG.md  PROJECT_HANDOVER.md  PROJECT_STATUS.md  PROXY_SETUP_GUIDE.md  PUSH_TO_GITHUB_CLEAN.sh  QUICK_START_FOR_COLLEAGUE.md  README.md  README_COMPLETE_GUIDE.md  auto_build.sh  build.rs  dependencies_backup_guide.md  export_env.sh  fetch_dependencies.sh  quick_build_apk.sh  quick_upload.sh  serve_deps.py  setup_env.sh  setup_env_centos.sh  setup_proxy_env.sh  wget-log  wget-log.1  依赖包备份和分发指南.md  新同事项目接手完整指南.md  项目状态报告.md
flutter/: ndk_arm64.sh  ndk_x64.sh  pubspec.yaml
flutter/android/: 6100cn-release-key.jks  gradle.properties
flutter/android/app/: build.gradle
flutter/lib/: generated_bridge_backup.dart  session_id_converter.dart
flutter/lib/models/: chat_model.dart  native_model.dart  server_model.dart
flutter/lib/platform/: android_dynamic_layouts.dart  android_texture_rgba_renderer.dart  android_window_manager.dart  android_window_size.dart
flutter/lib/utils/: http_service.dart
libs/scrap/: Cargo.toml  build.rs
myrd/: .gitignore  Cargo.toml  DEVELOPMENT_LOG.md  PROJECT_SUMMARY.md  build_android_minimal.sh  build_log.txt  build_log_final.txt  build_log_java17.txt  build_log_simplified.txt  create_minimal_android.sh  fix_android_errors.sh  proxy_build.sh  quick_build_apk.sh  setup_env.sh  start_proxy.sh
myrd/src/: flutter.rs  lib.rs  main.rs
src/: client.rs  flutter_ffi.rs  main.rs  ui_interface.rs
src/server/: audio_service.rs
tmp_headers/opus/: opus.h
(+29 files in other folders)
